crates/service/tests/code_action/snapshots/features__code_action__merge_to_return_call__call_before_return.snap
---
source: crates/service/tests/code_action/merge_to_return_call.rs
expression: response
---
[
  {
    "title": "Merge `call` and `return` to `return_call`",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 11
              },
              "end": {
                "line": 2,
                "character": 15
              }
            },
            "newText": "return_call"
          },
          {
            "range": {
              "start": {
                "line": 2,
                "character": 19
              },
              "end": {
                "line": 2,
                "character": 25
              }
            },
            "newText": ""
          }
        ]
      }
    }
  }
]
