crates/service/tests/code_action/snapshots/features__code_action__merge_to_return_call__call_only.snap
---
source: crates/service/tests/code_action/merge_to_return_call.rs
expression: response
---
[
  {
    "title": "Replace `call` with `return_call`",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 9
              },
              "end": {
                "line": 2,
                "character": 13
              }
            },
            "newText": "return_call"
          }
        ]
      }
    }
  }
]
